# api/controller/authController.go
@@ -2,7 +2,8 @@ package controller
 
 import (
 	"github.com/gin-gonic/gin"
-	"github.com/ismdeep/notification/api/handler/auth"
+	"github.com/ismdeep/notification/api/auth"
+	authHandler "github.com/ismdeep/notification/api/handler/auth"
 	"github.com/ismdeep/notification/api/request"
 	"github.com/ismdeep/notification/common"
 )
@@ -21,7 +22,7 @@ func SignUp(c *gin.Context) {
 		return
 	}
 
-	respData, err := auth.Register(req)
+	respData, err := authHandler.Register(req)
 	if err != nil {
 		JSON(c, WithError(err))
 		return
@@ -45,12 +46,32 @@ func SignIn(c *gin.Context) {
 		return
 	}
 
-	respData, err := auth.Login(req)
+	respData, err := authHandler.Login(req)
 	if err != nil {
 		JSON(c, WithError(err))
 		return
 	}
 
 	JSON(c, WithData(respData))
+	return
+}
+
+// GetUserInfo 用户信息
+// @Summary 用户信息
+// @Author jianglinwei@uniontech.com
+// @Description 用户信息
+// @Tags Auth
+// @Param Authorization	header	string true "Bearer 31a165baebe6dec616b1f8f3207b4273"
+// @Param body body	request. true "JSON数据"
+// @Success 200 {object} response.
+// @Router	/api/v1/user/info [get]
+func GetUserInfo(c *gin.Context) {
+	userInfo, err := auth.GetUserInfo(c)
+	if err != nil {
+		JSON(c, WithError(err))
+		return
+	}
+
+	JSON(c, WithData(userInfo))
 	return
 }
